# ekho

./: .pdm.toml  Makefile  README.md  alire.toml  ekho.gpr  pyproject.toml
config/: ekho_config.gpr
libekho/: .gitignore  alire.toml  libekho.gpr
libekho/config/: libekho_config.gpr
libekho/specs/: ekho.rflx
libekho/src/: libekho-client.adb  libekho-client.ads  libekho-compat.adb  libekho-compat.ads  libekho-listener.adb  libekho-listener.ads  libekho-server.adb  libekho-server.ads  libekho.adb  libekho.ads
src/: ekho.adb
