[project]
name = ""
version = ""
description = ""
authors = [
    {name = "rami3l", email = "rami3l@outlook.com"},
]
dependencies = [
    "RecordFlux @ git+https://github.com/Componolit/RecordFlux",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
